Address code review feedback: thread safety, validation, and code quality improvements (#3)
* Initial plan

* Apply code review feedback: thread safety, validation, annotations, and error handling

Co-authored-by: crramirez <8397379+crramirez@users.noreply.github.com>

* Update src/main/java/io/github/crramirez/casdial/DialogOptions.java

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

* Update src/main/java/io/github/crramirez/casdial/DialogOptions.java

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

---------

Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by: crramirez <8397379+crramirez@users.noreply.github.com>
Co-authored-by: Carlos Rafael Ramirez <crramirez@users.noreply.github.com>
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>